--- a/templates/vinyl/browse.html.twig
+++ b/templates/vinyl/browse.html.twig
@@ -32,7 +32,7 @@
                     <img src="{{ mix.getImageUrl(200) }}" alt="Mix album cover">
                    <p class="mt-2">
                     <a href="{{ path('app_mix_show', { id: mix.id }) }}" class="mixed-vinyl-container p-3 text-center">
-                        <strong>{{ mix.title }}</strong>
+                        {{ mix.title }}
                     </a>
 </p>
                     <span>{{ mix.trackCount }} Tracks</span>
